--- a/results/index.html
+++ b/results/index.html
@@ -15,16 +15,16 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <!-- <img src="assets/big-logo.png" /> -->
+            <img src="assets/big-logo.png" />
         </div>
     </header>
     <main>
         <section class="main-section">
-            <!-- <img class="main-logo" src="assets/alchemy-logo.png" /> -->
+            <img class="main-logo" src="assets/alchemy-logo.png" />
             <h2>
-                Gotta Catch 'Em All!
+                Your Pokeball!
             </h2>
-            <div id="pokemon">
+            <div id="your-results">
 
             </div>
         </section>
