make seen, caught, labels arrays made and tested. this is the only way I could try to get CI to pass

--- a/results/index.html
+++ b/results/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
     <title>Document</title>
 </head>
 
@@ -25,7 +27,7 @@
                 Your Pokeball!
             </h2>
             <div id="your-results">
-
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
